Bug 395393 - When playing a playlist on YouTube, Media Player sometimes shows wrong title
Summary: When playing a playlist on YouTube, Media Player sometimes shows wrong title
Status: RESOLVED FIXED
Alias: None
Product: plasma-browser-integration
Classification: Plasma
Component: Firefox (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-14 20:11 UTC by Vlad Zahorodnii
Modified: 2018-07-05 13:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vlad Zahorodnii 2018-06-14 20:11:06 UTC
Window title in Media Player is a little bit stochastic, for example

* Go to https://www.youtube.com/watch?v=vjVkXlxsO8Q&list=PLgwUvJ_atkZIzs0-MA5KVEh9YtwdCRQ5C
* Listen to Papercut
* Take a look at what currently playing video is (Papercut) https://imgur.com/a/4G9s6zA
* Wait for One Step Closer
* Take a look at what currently playing video is (Papercut) https://imgur.com/a/bBmwszS
* Wait for With You
* Take a look at what currently playing video is (One Step Closer) https://imgur.com/a/42EMWfA

Sometimes, it shows title from previous video. Sometimes, it shows title for current video.

(I don't use Google Chrome so I don't know whether that's a general bug or a bug specific to Firefox)
Comment 1 Vlad Zahorodnii 2018-06-14 20:13:56 UTC
Window title for each of those videos looks fine in the task manager.
Comment 2 Kai Uwe Broulik 2018-07-05 13:52:54 UTC
Git commit 49bd13222b1adfc2ca76699d153f5226269d963e by Kai Uwe Broulik.
Committed on 05/07/2018 at 13:52.
Pushed by broulik into branch 'Plasma/5.13'.

Monitor document title

When a website updates its page title dynamically or uses AJAX for page navigation, the page title when the player
started might be outdated
FIXED-IN: 5.13.3

M  +21   -0    extension/content-script.js
M  +1    -1    extension/extension.js
M  +18   -3    host/mprisplugin.cpp
M  +2    -0    host/mprisplugin.h

https://commits.kde.org/plasma-browser-integration/49bd13222b1adfc2ca76699d153f5226269d963e