Monitor document title

When a website updates its page title dynamically or uses AJAX for page navigation, the page title when the player
started might be outdated

BUG: 395393
FIXED-IN: 5.13.3